# torchtrainer

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt  tests.ipynb  train.py
coco/: coco Segmentation.ipynb  fastai coco.ipynb  pycocotools.ipynb
coco/river/: codes.txt
drive/data/: Drive data.txt
notebooks/: Image utilities.ipynb  Model Debug.ipynb  Model inspection and profiling.ipynb  Model utilities.ipynb  Models.ipynb
notebooks/examples/: Image classification.ipynb  Image segmentation.ipynb
notebooks/experimenters/: Oxford Pets.ipynb
notebooks/tests/: imagedataset.ipynb  layers.ipynb  learner.ipynb  module_util.ipynb  perf_funcs.ipynb  readme.md  test_iou.pdn  transforms.ipynb
notebooks/utilities_examples/: Image utilities.ipynb  Model Debug.ipynb  Model inspection and profiling.ipynb  Model utilities.ipynb  Models.ipynb
old_dev_notebooks/: img_util.ipynb  module_util.ipynb  readme.md  transforms.ipynb
teaching/: Gradient of convolution.ipynb  Untitled.ipynb
tests/: test_models.py
torchtrainer/: __init__.py  callbacks.py  datasets.py  guided_backprop.py  imagedataset.ipynb  imagedataset.py  img_util.ipynb  img_util.py  inspector.py  layers.ipynb  learner.ipynb  learner.py  losses.py  metrics.py  model_debug.py  models.ipynb  module_util.ipynb  module_util.py  notebook2script.py  perf_funcs.ipynb  perf_funcs.py  profiling.py  pyproject.toml  test.py  train.py  trainer.py  transforms.ipynb  transforms.py  util.py
torchtrainer/datasets/: __init__.py  fake_data.py  oxford_pets.py  vessel.py  vessel_base.py
(+65 files in other folders)
