[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torchtrainer"
version = "1.1.0"
authors = [
  { name="Cesar Comin"},
]
description = "Helper modules and a training script for working with neural networks with Pytorch."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/chcomin/torchtrainer"

[tool.setuptools]
packages = ["torchtrainer"]